# qc2plus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QC2PLUS_DOCUMENTATION.md  README.md  __init__.py  cli.py  doc.md  docker-compose-old.yml  docker-compose.yml  pyproject.toml  qc2plus_docs.md  requirements.txt  setup.py
cocker/: init_basic.sql  sample_data.sql
core/: engine.py  project.py
core/core/: connection.py
docker/: init_advanced.sql  init_basic.sql
examples/: .env.example  README.md
examples/advanced/: profiles.yml  qc2plus_project.yml
examples/advanced/models/: customer_datamart.yml  customers copy.yml  customers.yml  orders.yml  user_sessions.yml
examples/basic/: profiles.yml  qc2plus_project.yml
examples/basic/models/: customers.yml  orders.yml  user_sessions.yml
examples/data/: data_sample.sql  init_tables.sql  init_tables_first.sql  init_tables_ovh.sql  invalid_data_level_1_bigquery.sql  invalid_data_level_1_postgres.sql  invalid_data_level_2_distribution_postgres.sql  invalid_data_level_2_postgres.sql  load_sample_data.sql  nettoyage_data_level_1_biquery.sql  nettoyage_invalid_level_1_postgres.sql  transform_data.sql  valid_data_level_1_bigquery.sql  valid_data_level_1_postgres.sql  valid_data_level_2_distribution_postgres.sql
examples/poc/project/: README.md  profiles.yml  qc2plus_project.yml
examples/poc/project/models/: customers.yml
examples/student-datamart/: profiles.yml  qc2plus_project.yml
examples/student-datamart/models/: courses.yml  enrollments.yml  students.yml
examples/test_level_2/: profiles.yml
examples/test_level_2/data/: correlation_test_1_data.sql  correlation_test_2_data.sql  correlation_test_3_data.sql
examples/test_level_2/models/: correlation_test_1.yml  correlation_test_2.yml  correlation_test_3.yml
examples/zeflix-dev/: profiles.yml  qc2plus_project.yml  zeflix-dev-817164765e92.json
examples/zeflix-dev/models/: customer_datamart.yml  customers.yml  orders.yml  user_sessions.yml
level2/: correlation.py  distribution.py  multivariate.py
packaging/: BUILD_AND_PUBLISH.md  QUICK_START.md  Readme.md  publish.sh
persistence/: persistence.py
prompts/: project-setup.txt
qc2plus/: __init__.py  cli.py  requirements.txt  setup.py
qc2plus/alerting/: alerts.py
qc2plus/core/: _engine.py  connection.py  project.py  runner.py
qc2plus/level1/: engine.py  macros.py  macros_old.py  macros_some_adjust_alerts.py  utils.py
qc2plus/level2/: anomaly_filter.py  correlation.py  distribution.py  temporal.py
qc2plus/persistence/: persistence.py
qc2plus/sql/: db_functions.py
tests/: conftest.py  pytest.ini  requirements-dev.txt  test.py
tests/test_alerting/: test_alerts.py
tests/test_core/: test_project.py
tests/test_level1/: test_engine.py
tests/test_level2/: test_correlation.py
tests/test_output/: test_persistence.py
