    [build-system]
    requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "qc2plus"
    version = "1.0.5"
    description = "Data Quality Automation Framework with ML-powered anomaly detection"
    readme = "README.md"
    requires-python = ">=3.9"
    license = {text = "MIT"}
    authors = [
        {name = "QC2Plus Team", email = "contact-qc2plus@kheopsys.com"}
    ]
    keywords = ["data-quality", "sql", "ml", "anomaly-detection", "dbt-like"]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Topic :: Database",
        "Topic :: Software Development :: Quality Assurance",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]

    dependencies = [
        "click>=8.0.0",
        "pyyaml>=6.0",
        "jinja2>=3.0.0",
        "sqlalchemy>=1.4.0",
        "pandas>=1.3.0",
        "numpy>=1.21.0",
        "psycopg2-binary>=2.9.0",
        "snowflake-sqlalchemy>=1.4.0",
        "google-cloud-bigquery>=3.0.0",
        "google-cloud-bigquery-storage>=2.16.0", 
        "redshift-connector>=2.0.0",
        "pymysql>=1.0.0",
        "sqlalchemy>=1.4.0",
        "sqlalchemy-bigquery>=1.6.0", 
        "scikit-learn>=1.0.0",
        "scipy>=1.7.0",
        "statsmodels>=0.13.0",
        "requests>=2.28.0",
        "pytest>=7.0.0",
        "pytest-cov>=4.0.0",
        "black>=22.0.0",
        "flake8>=5.0.0",
        "mypy>=0.990",
        "sphinx>=5.0.0",
        "sphinx-rtd-theme>=1.0.0",
        "pyarrow>=9.0.0"
    ]

    [project.optional-dependencies]
    bigquery = [
        "google-cloud-bigquery>=3.0.0",
        "google-cloud-bigquery-storage>=2.16.0",
        "sqlalchemy-bigquery>=1.6.0",
        "pyarrow>=9.0.0"
    ]
    snowflake = [
        "snowflake-sqlalchemy>=1.4.0"
    ]
    redshift = [
    "redshift-connector>=2.0.0"
    ]
    mysql = [
        "pymysql>=1.0.0"
    ]
    all-databases = [
        "google-cloud-bigquery>=3.0.0",
        "google-cloud-bigquery-storage>=2.16.0",
        "sqlalchemy-bigquery>=1.6.0",
        "pyarrow>=9.0.0",
        "snowflake-sqlalchemy>=1.4.0",
        "redshift-connector>=2.0.0",
        "pymysql>=1.0.0"
    ]
    dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990"
    ]

    [project.urls]
    Homepage = "https://github.com/kheopsys/qc2plus-internal"
    Documentation = "https://github.com/kheopsys/qc2plus-internal/README.md"
    "Bug Reports" = "https://github.com/kheopsys/qc2plus-internal/issues"
    Source = "https://github.com/kheopsys/qc2plus-internal"

    [project.scripts]
    qc2plus = "qc2plus.cli:main"

